--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,11 +9,31 @@ trigger:
 pool:
   name: Default
 
-steps:
-- script: echo Hello, world!
-  displayName: 'Run a one-line script'
+stages:
 
-- script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
-  displayName: 'Run a multi-line script'
+- stage: CI
+  displayName: "CI - Build"
+  jobs:
+  - job: Build
+    steps:
+    - script: echo "CI running - code pulled from github"
+
+- stage: DEV
+  displayName: "Deployed to Dev"
+  dependsOn: CI
+  condition: succeeded()
+  jobs:
+  - job: DeployDev
+    steps:
+    - script: echo "Deploying to Dev(manual)"
+
+
+
+- stage: PROD
+  displayName: "Deployed to Prod"
+  dependsOn: CI
+  condition: succeeded()
+  jobs:
+  - job: DeployProd
+    steps:
+    - script: echo "Deploying to Prod(manual)"
