--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,39 +1,49 @@
 # Starter pipeline
-# Start with a minimal pipeline that you can customize to build and deploy your code.
-# Add steps that build, run tests, deploy, and more:
-# https://aka.ms/yaml
 
 trigger:
-- main
+  - main
 
 pool:
   name: Default
 
 stages:
+  - stage: CI
+    displayName: "CI - Build"
+    jobs:
+      - job: Build
+        steps:
+          - script: echo "CI running - code pulled from github"
 
-- stage: CI
-  displayName: "CI - Build"
-  jobs:
-  - job: Build
-    steps:
-    - script: echo "CI running - code pulled from github"
+  - stage: DEV
+    dependsOn: CI
+    jobs:
+      - deployment: DeployDev
+        environment: dev
+        strategy:
+          runOnce:
+            deploy:
+              steps:
+                - task: AzureFunctionApp@1
+                  inputs:
+                    azureSubscription: 'attchedFunc'
+                    appType: functionApp
+                    appName: 'check-custom'
+                    slotName: 'dev'
+                    package: '$(System.DefaultWorkingDirectory)'
 
-- stage: DEV
-  displayName: "Deployed to Dev"
-  dependsOn: CI
-  condition: succeeded()
-  jobs:
-  - job: DeployDev
-    steps:
-    - script: echo "Deploying to Dev(manual)"
-
-
-
-- stage: PROD
-  displayName: "Deployed to Prod"
-  dependsOn: CI
-  condition: succeeded()
-  jobs:
-  - job: DeployProd
-    steps:
-    - script: echo "Deploying to Prod(manual)"
+  - stage: PROD
+    dependsOn: DEV
+    jobs:
+      - deployment: DeployProd
+        environment: prod
+        strategy:
+          runOnce:
+            deploy:
+              steps:
+                - task: AzureFunctionApp@1
+                  inputs:
+                    azureSubscription: 'attchedFunc'
+                    appType: functionApp
+                    appName: 'check-custom'
+                    slotName: 'production'
+                    package: '$(System.DefaultWorkingDirectory)'
